# game-save-editor

./: .gitignore  Cargo.toml  GameSaveEditor.spec  README.md  build.bat  build_exe.bat  main.py  pyproject.toml  pytest.ini  requirements.txt  run.bat  test_output.txt
.github/workflows/: ci.yml
.superpowers/brainstorm/: server-out.txt
.superpowers/brainstorm/26844-20260523031950/content/: current-ui.html  design-proposal.html  layout-direction.html  navigation-modules.html  toolbox-bar.html  visual-style.html
.superpowers/brainstorm/26844-20260523031950/state/: server-stopped
.superpowers/brainstorm/3364-1779472427/content/: layout-comparison.html  layout-v2.html
.superpowers/brainstorm/3364-1779472427/state/: server-stopped
core/: bridge_backends.py  dependency_check.py  engine_detect.py  engine_profile.py  format_registry.py  game_bridge.py  game_config.py  game_data_scanner.py  game_detector.py  game_profile.py  lzstring.py  plugin_injector.py  renpy_bridge.py  renpy_injector.py  rpgmv_save.py  save_format.py
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs  registry.rs
crates/core/: Cargo.toml
crates/core/src/: backup.rs  base64.rs  config.rs  detector.rs  error.rs  integrity.rs  lib.rs  lzstring.rs  net.rs  types.rs
crates/core/tests/: golden_lzstring.rs
crates/detector/: Cargo.toml
crates/detector/src/: lib.rs
crates/engines/generic/: Cargo.toml
crates/engines/generic/src/: bridge.rs  format.rs  lib.rs
crates/engines/memory/: Cargo.toml
crates/engines/memory/src/: bridge.rs  lib.rs  module.rs  process.rs  region.rs  scanner.rs
crates/engines/renpy/: Cargo.toml
crates/engines/renpy/src/: bridge.rs  format.rs  injector.rs  lib.rs
crates/engines/rpgmaker/: Cargo.toml
crates/engines/rpgmaker/src/: format.rs  gamedata.rs  injector.rs  jsonex.rs  lib.rs  scanner.rs  tcp.rs
crates/engines/rpgmaker/tests/: jsonex_roundtrip.rs
crates/engines/unreal/: Cargo.toml
crates/engines/unreal/src/: bridge.rs  format.rs  lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  connection.rs  discovery.rs  factory.rs  lib.rs  main.rs  state.rs  theme.rs
crates/gui/src/panels/: backup.rs  mod.rs  realtime_editor.rs  save_editor.rs  settings.rs  startup.rs  status_bar.rs  tab_bar.rs  toolbox.rs  top_bar.rs
crates/gui/src/widgets/: category_tree.rs  field_table.rs  mod.rs  search_bar.rs  summary_card.rs
crates/gui/tests/: boundary_tests.rs  state_tests.rs  ui_behavior_tests.rs
crates/gui/tests/common/: mod.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs  memory.rs  net.rs
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-05-21-plan-1-foundation.md  2026-05-21-plan-2-rpgmaker.md  2026-05-21-plan-3-formats.md  2026-05-22-game-tool-gui-phase1.md  2026-05-22-game-tool-gui.md  2026-05-23-plugin-injection-safety.md  2026-05-23-realtime-editor-fixes.md  2026-05-23-ui-redesign-phase1.md  2026-05-23-ui-redesign-phase2.md  2026-05-23-ui-v3-bugfixes.md  2026-05-23-ui-v3-implementation.md  2026-05-24-toolbox-integrity-implementation.md
docs/superpowers/specs/: 2026-05-21-rust-rewrite-design.md  2026-05-22-game-tool-gui-design.md  2026-05-22-game-tool-gui-v2-design.md  2026-05-23-game-tool-ui-redesign.md  2026-05-23-game-tool-ui-v3-design.md  2026-05-24-toolbox-integrity-and-optimization.md  2026-05-24-universal-memory-bridge-design.md
formats/: __init__.py  generic_json.py  renpy.py  rpgmaker.py  unreal_gvas.py
profiles/: bf4aefff1772.profile.json  happy_home_patched.json  sample_game.json  幸福家里蹲的养成方法 (Game).json
tests/: conftest.py  test_bridge_architecture.py  test_dependency_check.py  test_rpgmv_save.py  test_smoke.py
tests/golden/lzstring/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  (+65 more)
ui/: main_window.py  modify_panel.py
