[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/infra",
    "crates/engines/rpgmaker",
    "crates/engines/renpy",
    "crates/engines/unreal",
    "crates/engines/generic",
    "crates/detector",
    "crates/app",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "2"
walkdir = "2"
tempfile = "3"
lz-str = "0.2"
toml = "0.8"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
