[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-save-editor"
version = "1.0.0"
description = "多格式游戏存档编辑器 — 支持 RPG Maker MV/MZ, Ren'Py, Unreal Engine, JSON"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Game Tool Dev"}
]
dependencies = [
    "pyside6>=6.5.0",
    "lzstring>=1.0.4",
    "websocket-client>=1.0.0",
]

[project.optional-dependencies]
frida = ["frida>=17.0.0", "frida-tools>=14.0.0"]
pymem = ["pymem>=1.14.0"]
full = ["frida>=17.0.0", "frida-tools>=14.0.0", "pymem>=1.14.0"]
dev = ["pytest>=7.0"]

[project.scripts]
game-save-editor = "main:main"
game-save-editor-gui = "main:main"

[tool.setuptools]
packages = ["core", "formats", "ui"]

[tool.setuptools.package-data]
profiles = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
minversion = "7.0"
