[package]
name = "GameSaveEditor"
version = "1.0.0"
edition = "2021"
description = "Game Save Editor — 多格式游戏存档编辑器"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "GameSaveEditor"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-log = "0.2"
walkdir.workspace = true
tempfile.workspace = true
rust-embed = "8"

game-tool-core = { path = "../core" }
game-tool-infra = { path = "../infra", features = ["net", "memory"] }
game-tool-rpgmaker = { path = "../engines/rpgmaker" }
game-tool-renpy = { path = "../engines/renpy" }
game-tool-unreal = { path = "../engines/unreal" }
game-tool-generic = { path = "../engines/generic" }
game-tool-detector = { path = "../detector" }
