[package]
name = "GameSaveEditor"
version = "1.0.0"
edition = "2021"
description = "Game Save Editor — 多格式游戏存档编辑器"

[[bin]]
name = "game-tool-cli"
path = "src/main.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
rust-embed = "8"

game-tool-core = { path = "../core" }
game-tool-rpgmaker = { path = "../engines/rpgmaker" }
