[package]
name = "game-tool-detector"
version = "0.1.0"
edition = "2021"
description = "Game Save Editor — 游戏存档类型自动检测引擎"

[dependencies]
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
game-tool-core = { path = "../core" }
game-tool-infra = { path = "../infra", features = ["memory"] }
