[package]
name = "game-tool-infra"
version = "0.1.0"
edition = "2021"
description = "Game Save Editor — 共享基础设施（网络 + 内存操作）"

[features]
default = []
net = ["tokio"]
memory = ["windows"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

tokio = { workspace = true, optional = true }
windows = { version = "0.58", optional = true, features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Foundation",
] }
